Add google calendar update

--- a/ty-weather-client/src/app/forecast/forecast.component.html
+++ b/ty-weather-client/src/app/forecast/forecast.component.html
@@ -1,5 +1,8 @@
-<div>
-  <h2>{{ forecast.temp | number : '1.1-1' }}°C on {{ forecast.date }}</h2>
-  <div><span>min: </span>{{ forecast.tempMin | number : '1.1-1' }}</div>
-  <div><span>max: </span>{{ forecast.tempMax | number : '1.1-1' }}</div>
+<div class="forecast ui-g">
+    <div class="ui-g-8 ui-g-nopad">
+        <div class="ui-g-12 temp">{{ forecast.temp | number : '1.1-1' }}°C</div>
+        <div class="ui-g-6 min">{{ forecast.tempMin | number : '1.1-1' }}°C</div>
+        <div class="ui-g-6 max">{{ forecast.tempMax | number : '1.1-1' }}°C</div>
+    </div>
+    <div class="ui-g-4">{{ forecast.date }}</div>
 </div>
