--- a/ty-weather-client/src/app/app.component.css
+++ b/ty-weather-client/src/app/app.component.css
@@ -1,14 +1,4 @@
 /* Application-wide Styles */
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}
-h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
 body {
   margin: 2em;
 }
@@ -18,5 +8,5 @@ body, input[text], button {
 }
 /* everywhere else */
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, Helvetica, sans-serif;
 }
