--- a/ty-weather-client/src/app/calendar-update/calendar-update.component.html
+++ b/ty-weather-client/src/app/calendar-update/calendar-update.component.html
@@ -1,3 +1,4 @@
-<p>
-  <button pButton type="button" (click)="update()" label="Update your google calendar !"></button>
-</p>
+<div>
+  <button pButton type="button" (click)="update()" label="Update your google calendar !" [disabled]="isLoading"></button>  
+  <div class="fa fa-circle-o-notch fa-spin fa-3x fa-lg" [class.invisible]="!isLoading"></div>
+</div>
