--- a/ty-weather-client/src/app/app.component.html
+++ b/ty-weather-client/src/app/app.component.html
@@ -1,2 +1,3 @@
 <h1>{{title}}</h1>
-<app-forecasts></app-forecasts>
+<app-calendar-update></app-calendar-update>
+<app-current-weather></app-current-weather>
