--- a/ty-weather-client/src/app/current-weather/current-weather.component.html
+++ b/ty-weather-client/src/app/current-weather/current-weather.component.html
@@ -1,17 +1,15 @@
-<ul>
+<div>
   <p-growl [(value)]="msgs"></p-growl>
 
-  <div class="ui-g-12 ui-md-6 ui-lg-4"></div>
-
-  <div *ngIf="currentWeather" class="ui-g-12 ui-md-6 ui-lg-4">
-    <div>Current weather on {{ currentWeather.name}} is {{ currentWeather.weather[0].description}}</div>
-
-    <div class="ui-g">
-      <div class="ui-g-12">{{ currentWeather.main.temp | number : '1.1-1' }}°C</div>
-      <div class="ui-g-6">{{ currentWeather.main.temp_min | number : '1.1-1' }}°C</div>
-      <div class="ui-g-6">{{ currentWeather.main.temp_max | number : '1.1-1' }}°C</div>
+  <div id="map" class="map">
+    <div *ngIf="currentWeather" class="weather-info">
+      <div class="weather-icon {{weatherClass}}"></div>
+      <div>Current weather on {{ currentWeather.name}} is {{ currentWeather.weather[0].description}}</div>
+      <div class="ui-g">
+        <div class="ui-g-12">{{ currentWeather.main.temp | number : '1.1-1' }}°C</div>
+        <div class="ui-g-6"><span class="icon-thermometer-empty"></span>{{ currentWeather.main.temp_min | number : '1.1-1' }}°C</div>
+        <div class="ui-g-6"><span class="icon-thermometer-full"></span>{{ currentWeather.main.temp_max | number : '1.1-1' }}°C</div>
+      </div>
     </div>
   </div>
-
-  <div class="ui-g-12 ui-md-6 ui-lg-4"></div>
-</ul>
+</div>
