--- a/ty-weather-client/src/app/app.component.html
+++ b/ty-weather-client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
+
 <app-calendar-update></app-calendar-update>
-
-<br />
-
 <app-current-weather></app-current-weather>
+
+<p-growl [(value)]="msgs"></p-growl>
