--- a/ty-weather-client/src/app/app.component.css
+++ b/ty-weather-client/src/app/app.component.css
@@ -10,3 +10,19 @@ body, input[text], button {
 * {
   font-family: Roboto, Helvetica, sans-serif;
 }
+
+.header {
+  margin-bottom: 10px;
+}
+
+.header img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header .header-calendar-component {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
